--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "dependencies": {
     "@multiavatar/multiavatar": "^1.0.7",
+    "@uauth/web3-react": "^2.0.0",
+    "@web3-react/abstract-connector": "^6.0.7",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "axios": "^0.27.2",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
@@ -28,6 +33,7 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "save-svg-as-png": "^1.4.17",
     "web3modal": "^1.9.7"
   },
